# seo_ai

./: .env_example  LICENSE  README.md  main.py  pyproject.toml  test.py
src/api/: seo_route.py
src/conf/: config.py
src/database/: db.py
src/schemas/: seo_schema.py
src/services/: llm.py
