[tool.poetry]
name = "seo-ai"
version = "0.1.0"
description = ""
authors = ["Alex Goliansky <a_goliansky@viyar.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
openai = "^1.57.4"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
